Bug 9916 - ACPI Error (...): No handler for Region [ECOR] [EmbeddedControl] - thinkpad X61s
Summary: ACPI Error (...): No handler for Region [ECOR] [EmbeddedControl] - thinkpad X61s
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: EC (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alexey Starikovskiy
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-08 06:36 UTC by Jiri Kosina
Modified: 2008-10-17 14:43 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.24
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
acpidump of x61s (282.60 KB, text/plain)
2008-02-08 06:37 UTC, Jiri Kosina
Details
dmesg of x61s (28.99 KB, text/plain)
2008-02-08 06:38 UTC, Jiri Kosina
Details
Find proper boot EC handle (995 bytes, patch)
2008-02-08 11:59 UTC, Alexey Starikovskiy
Details | Diff
dmesg with the patch applied (27.48 KB, text/plain)
2008-02-11 06:30 UTC, Jiri Kosina
Details
Delay enabling of GPE to after device initialization (2.08 KB, patch)
2008-03-04 16:32 UTC, Alexey Starikovskiy
Details | Diff
checkpatch-clean version (2.07 KB, patch)
2008-03-11 15:13 UTC, Alexey Starikovskiy
Details | Diff

Description Jiri Kosina 2008-02-08 06:36:58 UTC
Providing acpidump and dmesg output for ThinkPad x61s, as suggested on linux-acpi mailinglist [1]

[1] http://marc.info/?l=linux-acpi&m=120240964922311&w=2
Comment 1 Jiri Kosina 2008-02-08 06:37:52 UTC
Created attachment 14754 [details]
acpidump of x61s
Comment 2 Jiri Kosina 2008-02-08 06:38:17 UTC
Created attachment 14755 [details]
dmesg of x61s
Comment 3 Alexey Starikovskiy 2008-02-08 11:59:16 UTC
Created attachment 14758 [details]
Find proper boot EC handle

Please try this patch
Comment 4 Jiri Kosina 2008-02-11 06:30:59 UTC
Created attachment 14781 [details]
dmesg with the patch applied

This is the dmesg output with the patch applied.
Comment 5 Alexey Starikovskiy 2008-02-11 06:46:26 UTC
Jiri,
Original dmesg errors should lead to AC adapter being not found, do you see it now?
Do you still have any ACPI-related errors with the patch applied?
Comment 6 Len Brown 2008-02-14 22:53:50 UTC
patch in comment #3 applied to acpi-test
Comment 7 Len Brown 2008-02-22 21:57:56 UTC
shipped in 2.6.25-rc2-git6

closed.
Comment 8 Alexey Starikovskiy 2008-03-04 15:39:21 UTC
The patch is going to be reverted, so re-opening the bug
Comment 9 Alexey Starikovskiy 2008-03-04 15:51:30 UTC
Robert,
There seems to be a race between installation of EC space handler and GPE handler enabling, which tries to access the EC-space.
Comment 10 Alexey Starikovskiy 2008-03-04 16:32:37 UTC
Created attachment 15146 [details]
Delay enabling of GPE to after device initialization

This patch should restore the proper order.
Comment 11 Robert Moore 2008-03-05 14:17:22 UTC
We will have to make sure that this doesn't break something else; the initialization code can be extremely fragile.
Comment 12 Alexey Starikovskiy 2008-03-11 15:13:08 UTC
Created attachment 15219 [details]
checkpatch-clean version
Comment 13 Len Brown 2008-04-30 20:23:44 UTC
shipped in linux-2.6.25-git16:

commit 204470272c3b055b352d5f127d5d5c7dce5fa597
Author: Alexey Starikovskiy <astarikovskiy@suse.de>
Date:   Tue Mar 11 17:17:08 2008 -0400

    ACPI: GPE enabling should happen after EC installation
    
    GPE could try to access EC region, so should not be enabled before
    EC is installed
    
    http://bugzilla.kernel.org/show_bug.cgi?id=9916
    
    Signed-off-by: Alexey Starikovskiy <astarikovskiy@suse.de>
    Signed-off-by: Len Brown <len.brown@intel.com>
Comment 14 Zhang Rui 2008-05-21 02:02:33 UTC
Hmm, jiri,
With an un-patched kernel, can you confirm that a BIOS upgrade can fix the problem ?

Note You need to log in before you can comment on or make changes to this bug.